--- a/Marvel/Marvel/View/MainPage.xaml
+++ b/Marvel/Marvel/View/MainPage.xaml
@@ -5,11 +5,142 @@
              xmlns:local="clr-namespace:Marvel.Renders" 
              x:Class="Marvel.MainPage">
 
-    <FlexLayout BackgroundColor="#E8121D" Direction="Column" >
-        <Frame CornerRadius="5" BackgroundColor="Black" Margin="7,5" Padding="0" HeightRequest="45">
-            <local:ExtenderEntry HeightRequest="35" Margin="10,0" TextColor="White" FontSize="15" Style="{StaticResource BebasEntryStyle}" PlaceholderColor="White" Placeholder="Procure por um personagem"></local:ExtenderEntry>
+    <FlexLayout BackgroundColor="#202124" Direction="Column" >
+        
+        <Frame Grid.RowSpan="1" CornerRadius="5" BackgroundColor="Black" Margin="15,5" Padding="0" HeightRequest="90">
+            <local:ExtenderEntry x:Name="txtBusca" HeightRequest="45" Margin="10,0"  TextChanged="txtBusca_TextChanged"
+ TextColor="White" FontSize="15" Style="{StaticResource BebasEntryStyle}" PlaceholderColor="White" Placeholder="Procure por um personagem"></local:ExtenderEntry>
         </Frame>
-        <Label Text="Comics" Margin="21,10,0,0" Style="{StaticResource BebasBoldLabelStyle}" FontSize="24" TextColor="White" ></Label>
+
+
+        <Grid >
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="45"/>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <StackLayout x:Name="modoPesquisa" Grid.RowSpan="2" IsVisible="False" BackgroundColor="Transparent">
+                <ListView x:Name="listaHerois" BackgroundColor="Transparent" SeparatorColor="Transparent" RowHeight="150" >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout Orientation="Horizontal" >
+                                    <Frame Padding="0" Margin="0" WidthRequest="150">
+                                        <Image Source="Logo" HeightRequest="50" WidthRequest="50"></Image>
+                                    </Frame>
+                                    <StackLayout>
+                                        <Label Text="testsse" FontSize="26" TextColor="White" Style="{StaticResource BebasEntryStyle}"></Label>
+                                        <Label Text="Uma breve descricao sobre" FontSize="20" TextColor="White" Style="{StaticResource BebasEntryStyle}"></Label>
+                                    </StackLayout>
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+
+            </StackLayout>
+            <StackLayout Grid.RowSpan="2" BackgroundColor="Transparent" x:Name="modoPadrao" >
+                <Grid ColumnSpacing="0">
+                    <Grid.RowDefinitions >
+                        <RowDefinition Height="30*" />
+                        <RowDefinition Height="45*" />
+                        <RowDefinition Height="15*" />
+                    </Grid.RowDefinitions>
+
+                    <Frame Grid.Row="0" BackgroundColor="Black" Margin="15" CornerRadius="8" Padding="0" >
+                        <StackLayout Padding="10" Orientation="Vertical">
+                            <Grid ColumnSpacing="0">
+                                <Grid.RowDefinitions >
+                                    <RowDefinition Height="9*" />
+                                    <RowDefinition Height="90*" />
+                                    <RowDefinition Height="1*" />
+                                </Grid.RowDefinitions>
+
+                                <Label Text="Quadrinhos" Grid.Row="0" TextColor="White" Style="{StaticResource BebasBoldLabelStyle}" FontSize="18" ></Label>
+                                <Frame Padding="0" Grid.Row="1" BackgroundColor="Transparent" >
+
+                                    <ScrollView  HorizontalScrollBarVisibility="Never" VerticalScrollBarVisibility="Never" Orientation ="Horizontal">
+                                        <StackLayout BackgroundColor="Transparent" Orientation="Horizontal">
+                                            <Frame WidthRequest="120" Padding="0" BackgroundColor="#FF606C"></Frame>
+                                            <Frame WidthRequest="120" Padding="0" BackgroundColor="#FF4C5A"></Frame>
+                                            <Frame WidthRequest="120" Padding="0" BackgroundColor="#F63642"></Frame>
+                                            <Frame WidthRequest="120" Padding="0" BackgroundColor="#E8151C"></Frame>
+                                        </StackLayout>
+                                    </ScrollView>
+                                    
+                                </Frame>
+                            </Grid>
+                        </StackLayout>
+                    </Frame>
+                    <Frame Grid.Row="1" BackgroundColor="Black" CornerRadius="7" Margin="15,0,15,0">
+                        <Image Source="Logo"></Image>
+                    </Frame>
+                    <Frame Grid.Row="2" BackgroundColor="Transparent" Padding="0" Margin="15">
+                        <StackLayout Orientation="Horizontal">
+                            <Grid ColumnSpacing="0">
+
+                                <Grid.ColumnDefinitions >
+                                    <ColumnDefinition Width="50*" />
+                                    <ColumnDefinition Width="50*" />
+                                </Grid.ColumnDefinitions>
+
+                                <Frame Grid.Column="0" BackgroundColor="Black" Margin="0,0,10,0" WidthRequest="200" CornerRadius="7" Padding="0,0,0,15" >
+                                    <StackLayout>
+                                        <Grid ColumnSpacing="0">
+
+                                            <Grid.ColumnDefinitions >
+                                                <ColumnDefinition Width="40*" />
+                                                <ColumnDefinition Width="60*" />
+                                            </Grid.ColumnDefinitions>
+
+                                            <Grid.RowDefinitions >
+                                                <RowDefinition Height="80*" />
+                                                <RowDefinition Height="20*" />
+                                            </Grid.RowDefinitions>
+
+
+                                            <Image Source="spider" Grid.Row="0" Grid.Column="0" Margin="0,10,10,10"></Image>
+                                            <Frame Grid.Row="1" Grid.Column="1" BackgroundColor="Transparent" Padding="0" VerticalOptions="End">
+                                                <Label Text="Personagens"  TextColor="White" Style="{StaticResource BebasBoldLabelStyle}" FontSize="18" Margin="0,0,15,0" HorizontalTextAlignment="End" VerticalTextAlignment="End" ></Label>
+                                            </Frame>
+
+                                        </Grid>
+                                    </StackLayout>
+                                </Frame>
+                                <Frame Grid.Column="1" BackgroundColor="Black" Margin="10,0,0,0" WidthRequest="200" CornerRadius="7" Padding="0,0,0,15" >
+                                    <StackLayout>
+                                        <Grid ColumnSpacing="0">
+
+                                            <Grid.ColumnDefinitions >
+                                                <ColumnDefinition Width="40*" />
+                                                <ColumnDefinition Width="60*" />
+                                            </Grid.ColumnDefinitions>
+
+                                            <Grid.RowDefinitions >
+                                                <RowDefinition Height="80*" />
+                                                <RowDefinition Height="20*" />
+                                            </Grid.RowDefinitions>
+
+
+                                            <Image Source="comic" Grid.Row="0" Grid.Column="0" Margin="15"></Image>
+                                            <Frame Grid.Row="1" Grid.Column="1" BackgroundColor="Transparent" Padding="0" VerticalOptions="End">
+                                                <Label Text="hq's"  TextColor="White" Style="{StaticResource BebasBoldLabelStyle}" FontSize="18" Margin="0,0,15,0" HorizontalTextAlignment="End" VerticalTextAlignment="End" ></Label>
+                                            </Frame>
+
+                                        </Grid>
+                                    </StackLayout>
+                                </Frame>
+
+                            </Grid>
+                        </StackLayout>
+                    </Frame>
+
+                </Grid>
+            </StackLayout>
+        </Grid>
+
+
     </FlexLayout>
 
 </ContentPage>
