--- a/Marvel/Marvel/View/MainPage.xaml
+++ b/Marvel/Marvel/View/MainPage.xaml
@@ -5,15 +5,15 @@
              xmlns:local="clr-namespace:Marvel.Renders" 
              x:Class="Marvel.MainPage">
 
-    <FlexLayout BackgroundColor="#202124" Direction="Column" >
+    <FlexLayout x:Name="TelaTotal" BackgroundColor="#202124" Direction="Column" >
         
-        <Frame Grid.RowSpan="1" CornerRadius="5" BackgroundColor="Black" Margin="15,5" Padding="0" HeightRequest="90">
+        <Frame x:Name="Pesquisa" Grid.RowSpan="1" CornerRadius="5" BackgroundColor="Black" Margin="15,5" Padding="0" HeightRequest="90">
             <local:ExtenderEntry x:Name="txtBusca" HeightRequest="45" Margin="10,0"  TextChanged="txtBusca_TextChanged"
  TextColor="White" FontSize="15" Style="{StaticResource BebasEntryStyle}" PlaceholderColor="White" Placeholder="Procure por um personagem"></local:ExtenderEntry>
         </Frame>
 
 
-        <Grid >
+        <Grid x:Name="Corpo">
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="45"/>
