--- a/Marvel/Marvel/View/MainPage.xaml
+++ b/Marvel/Marvel/View/MainPage.xaml
@@ -3,11 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              NavigationPage.HasNavigationBar="False"
              xmlns:local="clr-namespace:Marvel.Renders" 
+             xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              x:Class="Marvel.MainPage"
              xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselView.FormsPlugin.Abstractions">
 
     <FlexLayout x:Name="TelaTotal" BackgroundColor="#202124" Direction="Column" >
-        
+
         <Frame x:Name="Pesquisa" Grid.RowSpan="1" CornerRadius="5" BackgroundColor="Black" Margin="15,5" Padding="0" HeightRequest="90">
             <local:ExtenderEntry x:Name="txtBusca" HeightRequest="45" Margin="10,0"  TextChanged="txtBusca_TextChanged"
  TextColor="White" FontSize="15" Style="{StaticResource BebasEntryStyle}" PlaceholderColor="White" Placeholder="Procure por um personagem"></local:ExtenderEntry>
@@ -64,14 +65,17 @@
                                 <Frame Padding="0" Grid.Row="1" BackgroundColor="Transparent" >
 
                                     <ScrollView  HorizontalScrollBarVisibility="Never" VerticalScrollBarVisibility="Never" Orientation ="Horizontal">
-                                        <StackLayout BackgroundColor="Transparent" Orientation="Horizontal">
-                                            <Frame WidthRequest="120" Padding="0" BackgroundColor="#FF606C"></Frame>
-                                            <Frame WidthRequest="120" Padding="0" BackgroundColor="#FF4C5A"></Frame>
-                                            <Frame WidthRequest="120" Padding="0" BackgroundColor="#F63642"></Frame>
-                                            <Frame WidthRequest="120" Padding="0" BackgroundColor="#E8151C"></Frame>
+                                        <StackLayout x:Name="sQuadrinhos" BindableLayout.ItemsSource="{Binding Quadrinhos}" BackgroundColor="Transparent" Orientation="Horizontal">
+                                            <BindableLayout.ItemTemplate>
+                                                <DataTemplate>
+                                                    <Frame WidthRequest="120" Padding="0" BackgroundColor="#FF606C">
+                                                        <ff:CachedImage Aspect="AspectFill" Source="{Binding ImagemUrl}"/>
+                                                    </Frame>
+                                                </DataTemplate>
+                                            </BindableLayout.ItemTemplate>
                                         </StackLayout>
                                     </ScrollView>
-                                    
+
                                 </Frame>
                             </Grid>
                         </StackLayout>
@@ -89,20 +93,23 @@
                                             </Grid.RowDefinitions>
                                             <Frame BorderColor="Transparent" BackgroundColor="Transparent" CornerRadius="1" Margin="10,0,10,0" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" Padding="0">
 
-                                                <StackLayout Padding="0,0,0,0" BackgroundColor="#202124">
+                                                <StackLayout Padding="0,0,0,0" BackgroundColor="Transparent">
                                                     <Frame Margin="0" Padding="0">
-                                                        <Image Source="{Binding ImagemUrl}"/>
+                                                        <ff:CachedImage Aspect="Fill" Source="{Binding ImagemUrl}"/>
                                                     </Frame>
                                                 </StackLayout>
                                             </Frame>
 
                                             <StackLayout Grid.Row="1">
-                                                <Label Text="{Binding Nome}" Grid.Row="0" TextColor="White" Style="{StaticResource BebasBoldLabelStyle}" FontSize="18" HorizontalTextAlignment="Center" ></Label>
+
                                             </StackLayout>
 
+                                            <Label Text="{Binding Nome}" Grid.Row="0" TextColor="White" Style="{StaticResource BebasBoldLabelStyle}" FontSize="18" HorizontalTextAlignment="Center" ></Label>
 
                                         </Grid>
+
                                     </StackLayout>
+
                                 </DataTemplate>
                             </cv:CarouselViewControl.ItemTemplate>
                         </cv:CarouselViewControl>
