--- a/Marvel/Marvel/View/MainPage.xaml
+++ b/Marvel/Marvel/View/MainPage.xaml
@@ -22,29 +22,36 @@
 
             <FlexLayout x:Name="modoPesquisa" Grid.RowSpan="2" IsVisible="True" BackgroundColor="Transparent">
 
-                <StackLayout x:Name="listaHerois"   BackgroundColor="Transparent"  >
-                    <BindableLayout.ItemTemplate >
-                        <DataTemplate  >
-                            <StackLayout Orientation="Vertical" BackgroundColor="Transparent">
-                                    <Frame Padding="10" Margin="10" WidthRequest="400" BackgroundColor="Black" CornerRadius="10" >
+                    <StackLayout x:Name="listaHerois"   BackgroundColor="Transparent"  >
+                        <BindableLayout.ItemTemplate >
+                            <DataTemplate  >
+                            <StackLayout Orientation="Vertical" Margin="10,0,10,0" BackgroundColor="Transparent">
+                                <Grid>
+
+                                    <Grid.RowDefinitions >
+                                        <RowDefinition Height="10*" />
+                                        <RowDefinition Height="150*" />
+                                        <RowDefinition Height="35*" />
+                                    </Grid.RowDefinitions>
+                                    
+                                    <Label Grid.Row="0" Text="{Binding Nome}" HorizontalTextAlignment="Center" FontSize="32" Margin="0,10,0,0" TextColor="White" Style="{StaticResource BebasEntryStyle}"/>
+
+                                    <Frame Grid.Row="1" Padding="10" Margin="10" WidthRequest="400" BackgroundColor="Black" CornerRadius="10" >
                                         <Frame Padding="0" BackgroundColor="Transparent">
                                             <ff:CachedImage Aspect="AspectFill" Source="{Binding ImagemUrl}" HeightRequest="50" WidthRequest="100">
                                             </ff:CachedImage>
                                         </Frame>
                                     </Frame>
-                                    <Label Text="{Binding Nome}" FontSize="26" Margin="0,10,0,0" TextColor="White" Style="{StaticResource BebasEntryStyle}">
-                                    </Label>
-                                    <Label Text="{Binding Descricao}" FontSize="12" TextColor="White" Style="{StaticResource BebasEntryStyle}">
-                                    </Label>
+                                    <Label Grid.Row="2" Text="{Binding Descricao}" FontSize="18" TextColor="White" Style="{StaticResource BebasEntryStyle}"/>
 
+                                </Grid>
+                            </StackLayout>
 
-                                </StackLayout>
+                            </DataTemplate>
+                        </BindableLayout.ItemTemplate>
+                    </StackLayout>
 
-                        </DataTemplate>
-                    </BindableLayout.ItemTemplate>
-                </StackLayout>
-
-            </FlexLayout>
+                </FlexLayout>
             <FlexLayout Grid.RowSpan="2" x:Name="modoPadrao" BackgroundColor="Transparent" >
                 <Grid ColumnSpacing="0">
                     <Grid.RowDefinitions >
